src/test/ui/panic-handler/weak-lang-item.stderr
error[E0259]: the name `core` is defined multiple times
  --> $DIR/weak-lang-item.rs:8:1
   |
LL | extern crate core;
   | ^^^^^^^^^^^^^^^^^^ `core` reimported here
   |
   = note: `core` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | extern crate core as other_core;
   |

error: language item required, but not found: `eh_personality`

error: `#[panic_handler]` function required, but not found

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0259`.
